--- a/loos.dox
+++ b/loos.dox
@@ -47,6 +47,34 @@ More information is available here:
 There are none...only features.  So don't worry about them!
 (email me directly for now)
 
+\section build Building and Installing
+LOOS requires <A href="http://www.scons.org" target="_blank">SCons</A> to build.  It also
+requires the vecLib framework and Developer's Tools for OS X or <A
+href="http://math-atlas.sourceforge.net" target="_blank">Atlas</A> for Linux.  It also
+requires the <A href="http://boost.org" target="_blank">Boost</A> libraries for both
+(including the regular expression library).
+
+To build just the library, cd to the top-level directory and run
+SCons:
+\verbatim
+cd /Users/myself/LOOS
+scons
+\endverbatim
+You can also use the "examples" or "docs" targets to build those
+components in addition to the library, or you can use "scons all" to
+build everything.
+
+To use LOOS, you will want to include the top-level LOOS directory in
+both your include path and your library paths, so something like the
+following for linux
+\verbatim
+g++ -o mytool mytool.cpp -I/Users/myself/LOOS -L/Users/myself/LOOS -lloos -lboost_regex -llapack -latlas
+\endverbatim
+or the following for OS X
+\verbatim
+g++ -framework vecLib -o mytool mytool.cpp -I/Users/myself/LOOS -L/Users/myself/LOOS -lloos -lboost_regex
+\endverbatim
+
 */
 
 
