--- a/loos.dox
+++ b/loos.dox
@@ -173,7 +173,21 @@ and expect it to be substituted with the appropriate value, for example.
 <tr align="center"><td>resid</td><td>Residue ID</td><td>number</td><td>&gt;, &gt;=, &lt;=, &lt;, ==, !=</td></tr>
 <tr align="center"><td>segid</td><td>Atom segid</td><td>string</td><td>&gt;, &gt;=, &lt;=, &lt;, ==, !=, =~</td></tr>
 <tr align="center"><td>segname</td><td>Synonym for segid</td><td>string</td><td>&gt;, &gt;=, &lt;=, &lt;, ==, !=, =~</td></tr>
+<tr align="center"><td>all</td><td>Evaluates to true</td><td>number</td><td></td></tr>
 </table>
+
+Notes:\n
+The \c all keyword is used to force a selection string to match all
+atoms in instances where a selection is required.  For example, a
+program to align frames of a trajectory DCD to a reference structure
+might require a selection to pick which atoms to use when computing
+the rotations and then another selection to pick which atoms are
+actually rotated.  If you wanted to apply the rotation to all atoms,
+you just use the \c all keyword, i.e.
+\verbatim
+aligner --selection='name='CA' && segid =~ "BAR[12]"' --transform='all' foo.pdb foo.dcd newfoo
+\endverbatim
+
 
 \subsection regexps Regular Expression Matching
 The regular expression matching operator "=~" deserves special
