--- a/loos.dox
+++ b/loos.dox
@@ -194,6 +194,7 @@ and expect it to be substituted with the appropriate value, for example.
 <tr align="center"><td>segid</td><td>Atom segid</td><td>string</td><td>&gt;, &gt;=, &lt;=, &lt;, ==, !=, =~</td></tr>
 <tr align="center"><td>segname</td><td>Synonym for segid</td><td>string</td><td>&gt;, &gt;=, &lt;=, &lt;, ==, !=, =~</td></tr>
 <tr align="center"><td>all</td><td>Evaluates to true</td><td>number</td><td></td></tr>
+<tr align="center"><td>hydrogen</td><td>Evaluates to true if atom is a hydrogen</td><td>number</td><td></td></tr>
 </table>
 
 Notes:\n
