Added link to software in the dox
svn path=/software/LOOS/trunk/; revision=818

--- a/loos.dox
+++ b/loos.dox
@@ -47,7 +47,10 @@ you may be affecting multiple groups in potentially unknown ways.
 
 For assistance using LOOS, to suggest a patch, to request a feature, or simply
 to offer positive feedback, email Tod Romo (tod_romo [AT] urmc.rochester.edu)
-or Alan Grossfield (alan_grossfield [AT] urmc.rochester.edu).  
+or Alan Grossfield (alan_grossfield [AT] urmc.rochester.edu).    The
+latest version of LOOS can be found at
+<A HREF="http://membrane.urmc.rochester.edu/Software/LOOS/Releases">
+http://membrane.urmc.rochester.edu/Software/LOOS/Releases</A>.
 
 \section Features
 One of the features of LOOS is the multiple ways it supports atom
