--- a/loos.dox
+++ b/loos.dox
@@ -46,10 +46,9 @@ mean that you should be careful though when modifying an atom since
 you may be affecting multiple groups in potentially unknown ways.
 
 For assistance using LOOS, to suggest a patch, to request a feature, or simply
-to offer positive feedback, email Tod Romo (tod_romo [AT] urmc.rochester.edu)
-or Alan Grossfield (alan_grossfield [AT] urmc.rochester.edu).    The
-latest version of LOOS can be found at
-<A HREF="http://membrane.urmc.rochester.edu/Software/LOOS/Releases">
+to offer positive feedback, email LOOS-maintainer [AT] urmc.rochester.edu.  The
+latest version of LOOS can be found at <A
+HREF="http://membrane.urmc.rochester.edu/Software/LOOS/Releases">
 http://membrane.urmc.rochester.edu/Software/LOOS/Releases</A>.
 
 \section Features
